Fixed spacing for titles

--- a/css/popup.css
+++ b/css/popup.css
@@ -3,10 +3,11 @@ body {
 }
 
 h2 {
-    font-family: 'Segoe UI', Tahoma, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     text-align: center;
     vertical-align: middle;
-    margin-bottom: 18px;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
     display: inline-block;
     margin-left: 5px;
 }
